# scout_ws

./: .gitignore  README.md
scout_mini_ros2/scout_bringup/: package.xml
scout_mini_ros2/scout_bringup/launch/: scout_mini_gazebo.launch.py
scout_mini_ros2/scout_bringup/urdf/: scout_mini_sim.urdf.xacro
src/scout_control/: package.xml  setup.cfg
src/scout_control/scout_control/: move_circle.py  sensor_reader.py
src/scout_mini_ros2/scout_bringup/: CMakeLists.txt
src/scout_mini_ros2/scout_bringup/urdf/: scout_mini_sim.urdf.xacro
src/scout_mini_ros2/scout_bringup/worlds/: scout_world.world
src/scout_mini_ros2/scout_control/: setup.py
src/scout_mini_ros2/scout_control/scout_control/: move_square.py  obstacle_stop.py
src/scout_mini_ros2/scout_sim/: CMakeLists.txt  package.xml
src/scout_mini_ros2/scout_sim/config/: nav2_params.yaml  ros_gz_bridge.yaml  scout_nav.rviz  slam_toolbox_params.yaml
src/scout_mini_ros2/scout_sim/launch/: scout_sim.launch.py  scout_sim_dc.launch.py  scout_sim_maze.launch.py  scout_sim_maze_2.launch.py  scout_sim_maze_nav2.launch.py  slam_toolbox.launch.py
src/scout_mini_ros2/scout_sim/maps/: maze_class7_map.pgm  maze_class7_map.yaml
src/scout_mini_ros2/scout_sim/urdf/: scout_mini.urdf.xacro
src/scout_mini_ros2/scout_sim/worlds/: dc.sdf  dc_with_obstacles.sdf  maze_class5.sdf  maze_class7.sdf  scout_world.sdf
src/scout_ros2/scout_base/: CMakeLists.txt  package.xml
src/scout_ros2/scout_base/include/scout_base/: scout_base_ros.hpp  scout_messenger.hpp
src/scout_ros2/scout_base/launch/: scout_base.launch.py  scout_mini_base.launch.py  scout_mini_omni_base.launch.py
src/scout_ros2/scout_base/src/: scout_base_node.cpp  scout_base_ros.cpp
src/scout_ros2/scout_msgs/: CMakeLists.txt  package.xml
src/scout_ros2/scout_msgs/msg/: ScoutActuatorState.msg
src/ugv_sdk/: CMakeLists.txt
src/ugv_sdk/include/ugv_sdk/details/robot_base/: bunker_base.hpp
src/ugv_sdk/sample/tracer_demo/: tracer_robot_demo.cpp
