<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scout_bringup</name>
  <version>0.1.0</version>
  <description>
    Simulation bringup package for the AgileX Scout Mini robot.
    Provides Gazebo Classic 11 launch files, URDF with simulation plugins,
    and world files for the Autonomous Mobile Robots course.
    ROS2 Humble + Gazebo Classic 11.
    UFSCar 2025 — Teaching Assistant: Milad
  </description>

  <maintainer email="milad@ufscar.br">Milad</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Message types -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
